--- a/EXshop/src/main/resources/templates/admin/index.html
+++ b/EXshop/src/main/resources/templates/admin/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security6">
 <head th:replace="admin/fragments/head :: head">
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -18,10 +18,6 @@
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
-            <h1>
-                Blank page
-                <small>it all starts here</small>
-            </h1>
             <ol class="breadcrumb">
                 <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
                 <li><a href="#">Examples</a></li>
