--- a/EXshop/src/main/resources/templates/admin/fragments/header.html
+++ b/EXshop/src/main/resources/templates/admin/fragments/header.html
@@ -106,7 +106,7 @@
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img th:src="@{/assets/images/user2-160x160.jpg}" class="user-image" alt="User Image">
-                        <span class="hidden-xs">ADMIN</span>
+                        <span class="hidden-xs"><span sec:authentication="name"></span></span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
@@ -139,7 +139,7 @@
                                 <a href="#" class="btn btn-default btn-flat">Profile</a>
                             </div>
                             <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                <a th:href="@{/admin-logout}" class="btn btn-default btn-flat">Sign out</a>
                             </div>
                         </li>
                     </ul>
