--- a/EXshop/src/main/resources/templates/admin/logon.html
+++ b/EXshop/src/main/resources/templates/admin/logon.html
@@ -36,7 +36,7 @@
         <p class="login-box-msg">Sign in to start your session</p>
         <form th:action="@{/logon}" method="post">
             <div class="form-group has-feedback">
-                <input type="text" class="form-control" placeholder="userName" name="username">
+                <input type="text" class="form-control" placeholder="UserName" name="username">
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
@@ -45,7 +45,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-8">
-                    <div class="checkbox icheck">
+                    <div class="checkbox icheck ml-2">
                         <label>
                             <input type="checkbox"> Remember Me
                         </label>
