--- a/EXshop/src/main/resources/templates/admin/category/index.html
+++ b/EXshop/src/main/resources/templates/admin/category/index.html
@@ -53,58 +53,33 @@
 
                     <div class="box-body no-padding">
                         <table class="table">
-                            <tbody><tr>
-                                <th style="width: 10px">#</th>
-                                <th>Task</th>
-                                <th>Progress</th>
-                                <th style="width: 40px">Label</th>
-                            </tr>
+                            <tbody>
                             <tr>
-                                <td>1.</td>
-                                <td>Update software</td>
-                                <td>
-                                    <div class="progress progress-xs">
-                                        <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-                                    </div>
-                                </td>
-                                <td><span class="badge bg-red">55%</span></td>
+                                <th style="width: 10px">ID</th>
+                                <th>Category name</th>
+                                <th>Status</th>
+                                <th >Action</th>
                             </tr>
-                            <tr>
-                                <td>2.</td>
-                                <td>Clean database</td>
+                            <tr th:each="category : ${categoryList}">
+                                <td th:text="${category.id}"></td>
+                                <td th:text="${category.categoryName}"></td>
+                                <td th:if="${category.categoryStatus}"><span class="label label-success">Stock Up</span></td>
+                                <td th:if="${!category.categoryStatus}"><span class="label label-danger">Sold out</span></td>
+
+
                                 <td>
-                                    <div class="progress progress-xs">
-                                        <div class="progress-bar progress-bar-yellow" style="width: 70%"></div>
-                                    </div>
+                                    <a th:href="@{/admin/edit-category/{id}(id=${category.id})}" class="btn btn-success">edit</a>
+                                    <a th:href="@{/admin/delete-category/{id}(id=${category.id})}" onclick="return confirm('you want to delete')" class="btn btn-danger">Delete</a>
+
                                 </td>
-                                <td><span class="badge bg-yellow">70%</span></td>
                             </tr>
-                            <tr>
-                                <td>3.</td>
-                                <td>Cron job running</td>
-                                <td>
-                                    <div class="progress progress-xs progress-striped active">
-                                        <div class="progress-bar progress-bar-primary" style="width: 30%"></div>
-                                    </div>
-                                </td>
-                                <td><span class="badge bg-light-blue">30%</span></td>
-                            </tr>
-                            <tr>
-                                <td>4.</td>
-                                <td>Fix and squish bugs</td>
-                                <td>
-                                    <div class="progress progress-xs progress-striped active">
-                                        <div class="progress-bar progress-bar-success" style="width: 90%"></div>
-                                    </div>
-                                </td>
-                                <td><span class="badge bg-green">90%</span></td>
-                            </tr>
-                            </tbody></table>
+                            </tbody>
+                        </table>
                     </div>
 
                 </div>
 
-
+            </div>
         </section>
         <!-- /.content -->
     </div>
